--- a/src/Aspire/Banky.AppHost/Banky.AppHost.csproj
+++ b/src/Aspire/Banky.AppHost/Banky.AppHost.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="13.1.0" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="13.1.0" />
-    <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="13.1.0" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
