--- a/src/Services/Account.Command/Account.Command.Api/Account.Command.Api.csproj
+++ b/src/Services/Account.Command/Account.Command.Api/Account.Command.Api.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.3.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
   </ItemGroup>
 
