--- a/src/Services/Account.Command/Account.Command.Infrastructure/Account.Command.Infrastructure.csproj
+++ b/src/Services/Account.Command/Account.Command.Infrastructure/Account.Command.Infrastructure.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.7" />
+    <PackageReference Include="MassTransit.Kafka" Version="8.3.4" />
   </ItemGroup>
 
   <PropertyGroup>
